--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/barlow": "^5.0.14",
     "@fontsource/barlow-condensed": "^5.0.14",
     "@fontsource/bellefair": "^5.0.14",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
