--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/barlow-condensed": "^5.0.14",
     "@fontsource/bellefair": "^5.0.14",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@tanstack/react-router": "^1.49.2",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -31,6 +32,8 @@
     "@storybook/react": "^8.2.9",
     "@storybook/react-vite": "^8.2.9",
     "@storybook/test": "^8.2.9",
+    "@tanstack/router-devtools": "^1.49.2",
+    "@tanstack/router-plugin": "^1.49.3",
     "@types/node": "^22.4.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
