--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/barlow-condensed": "^5.0.14",
     "@fontsource/bellefair": "^5.0.14",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-router": "^1.49.2",
     "path": "^0.12.7",
     "react": "^18.3.1",
